# cahier-de-doleances

./: .buildpacks  .env.example  .env.scalingo  .gitignore  .pre-commit-config-simple.yaml  .pre-commit-config.yaml  Aptfile  Dockerfile  LICENSE  Procfile  SCALINGO_DEPLOYMENT.md  TESTING-BASIC.md  TESTING.md  alembic.ini  docker-compose.yml  playwright.config.py  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  scalingo-buildpack.txt  tailwind.config.js  todo.md
.github/workflows/: test.yml
app/: app.py  config.py  dal.py  db.py  deps.py  helpers.py  i18n.py  main.py  models.py  web.py
e2e/: conftest.py
gdn_ingest/: Cargo.toml
gdn_ingest/src/: main.rs
ingest/: gdn_ingest.py
migrations/: env.py
notebooks/: culture.md
scripts/: analyse_pass_culture.py  analyze_errors.py  analyze_query_performance.py  analyze_visitors.py  check-alignment.sh  check_model_alignment.py  clean_search_cache.py  clear_cache.py  compile_translations.py  count_culture_jeunesse_keywords.py  deb_check.sh  error_report.md  export_culture_jeunesse_plus.py  export_pass_culture.py  extract_messages.py  fix_question_types.py  gen_requirements.py  import_from_csv.sh  init_translations.py  logs_scalingo.txt  logs_scalingo_extended.txt  make_sandbox.py  populate_test_pg.py  rebuild_index.py  run_tests.py  setup_basic_testing.py  setup_test_db.py  setup_test_docker.py  setup_testing.py  test_search_performance.py  update_translations.py  visitor_summary.md
tests/: conftest.py  test_basic.py  test_cache.py  test_local_og.sh  test_performance.py
translations/: messages.pot
(+108 files in other folders)
