[package]
name = "gdn_ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
flate2 = "1"                             # pas de feature `gzip`
glob = "0.3"
hex = "0.4"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
